# liboi

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  FindLIBOI.cmake  README.md  beignet.md  ignorelist.txt
CMakeModules/: FindCCFITS.cmake  FindOpenCL.cmake  FindTEXTIO.cmake  SetVersion.cmake
lib/: .gitignore  UpdateLibs.sh
lib/getoifits/: CMakeLists.txt  getoifits.c  getoifits.cpp  getoifits.h
lib/oifitslib/: CMakeLists.txt  README  demo.c  exchange.h  free_fits.c  oicheck.c  oicheck.h  oicheck.i  oifile.c  oifile.h  oifilter.c  oifilter.h  oifilter.i  oifits-check.c  oifits-filter.c  oifits-merge.c  oifits.i  oifits_typemaps.i  oimerge.c  oimerge.h  oimerge.i  read_fits.c  write_fits.c
lib/oifitslib/doc/: annotated.html  classes.html  exchange_8h-source.html  exchange_8h.html  files.html  free__fits_8c.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  group__oicheck.html  group__oifile.html  group__oifilter.html  group__oimerge.html  group__oitable.html  index.html  main.html  modules.html  oicheck_8c.html  oicheck_8h-source.html  oicheck_8h.html  oifile_8c.html  oifile_8h-source.html  oifile_8h.html  oifilter_8c.html  oifilter_8h-source.html  oifilter_8h.html  oimerge_8c.html  oimerge_8h-source.html  oimerge_8h.html  read__fits_8c.html  search.idx  search.php  structelement.html  structoi__array.html  (+14 more)
samples/: CP.fits  CP.json  CP_noise.fits  CP_nonoise.fits  LDD-2_0mas-0_5alpha_noise.oifits  LDD-2_0mas-0_5alpha_nonoise.oifits  PointSource_noise.oifits  PointSource_noise.oifits~  PointSource_nonoise.oifits  PointSource_nonoise.oifits~  README  Trinary_noise.fits  Trinary_noise.fits~  Trinary_nonoise.fits  Trinary_nonoise.fits~  UDD-2_5mas-0_025maxperpix.fits~  UDD-2_5mas_noise.oifits  UDD-2_5mas_nonoise.oifits  fft_plots.gp
src/: CLibOI.cpp  CLibOI.h  CMakeLists.txt  COILibData.cpp  COILibData.h  COILibDataList.cpp  COILibDataList.h  COpenCL.cpp  COpenCL.h  COpenCL.hpp  COpenCLRoutine.cpp  COpenCLRoutine.h  CRoutine.cpp  CRoutine.h  CRoutine_Chi.cpp  CRoutine_Chi.h  CRoutine_Chi2.cpp  CRoutine_Chi2.h  CRoutine_Chi_test.cpp  CRoutine_DFT.cpp  CRoutine_DFT.h  CRoutine_DFT_test.cpp  CRoutine_FFT_clFFT.cpp  CRoutine_FFT_clFFT.h  CRoutine_FFT_clFFT_test.cpp  CRoutine_FT.cpp  CRoutine_FT.h  CRoutine_FTtoT3.cpp  CRoutine_FTtoT3.h  CRoutine_FTtoT3_test.cpp  CRoutine_FTtoV2.cpp  CRoutine_FTtoV2.h  CRoutine_FTtoV2_test.cpp  CRoutine_FTtoVis.cpp  CRoutine_FTtoVis.h  CRoutine_ImageToBuffer.cpp  CRoutine_ImageToBuffer.h  CRoutine_ImageToBuffer_test.cpp  CRoutine_LogLike.cpp  CRoutine_LogLike.h  (+35 more)
src/kernels/: chi.cl  chi2.cl  chi_bispectra_convex.cl  chi_bispectra_nonconvex.cl  chi_complex_convex.cl  chi_complex_nonconvex.cl  ft_clfft_nearest.cl  ft_dft2d.cl  ft_to_t3.cl  ft_to_vis.cl  ft_to_vis2.cl  image2buf_GL_R.cl  kernel_reduce_float.cl  loglike.cl  normalize.cl  normalize_float.cl  reduce_sum_float.cl  reduce_sum_float_amd.cl  square.cl  zero_buffer.cl
src/models/: CModel.cpp  CModel.h  CPointSource.cpp  CPointSource.h  CUniformDisk.cpp  CUniformDisk.h
